--- a/src/index.html
+++ b/src/index.html
@@ -50,14 +50,15 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
-							<h2 class="hero_title line--title_bottom line--color01">ScrollMagic</h2>
+							<h2 class="hero_title line--title_bottom line--color01">Parallax</h2>
 							<p class="hero_text">JavaScript Library</p>
 						</div>
 					</div>
 					<div class="topics">
 						<ul class="topics_list clearfix">
-							<li class="topics_item"><a href="scrollmagic/index2.html">パララックス2</a></li>
-							<li class="topics_item"><a href="scrollmagic/index1.html">パララックス</a></li>
+							<li class="topics_item"><a href="parallax/index3.html">skrollr</a></li>
+							<li class="topics_item"><a href="parallax/index2.html">Parallax2</a></li>
+							<li class="topics_item"><a href="parallax/index1.html">Parallax</a></li>
 						</ul>
 					</div>
 <!-- 					<div class="readmore"><a href="scrollmagic/index.html">全て見る</a></div> -->
