--- a/src/parallax/index.html
+++ b/src/parallax/index.html
@@ -38,8 +38,8 @@
 					</div>
 					<div class="topics">
 						<ul class="topics_list clearfix">
-							<li class="topics_item"><a href="index2.html">パララックス2</a></li>
-							<li class="topics_item"><a href="index1.html">パララックス</a></li>
+							<li class="topics_item"><a href="index2.html">Parallax2</a></li>
+							<li class="topics_item"><a href="index1.html">Parallax</a></li>
 						</ul>
 					</div>
 				</section>
