--- a/src/parallax/index2.html
+++ b/src/parallax/index2.html
@@ -38,7 +38,7 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
-							<h1 class="hero_title line--title_bottom line--color01">パララックス</h1>
+							<h1 class="hero_title line--title_bottom line--color01">Parallax</h1>
 							<p class="hero_text">2017.03.10</p>
 						</div>
 					</div>
