--- a/src/parallax/index1.html
+++ b/src/parallax/index1.html
@@ -36,7 +36,7 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
-							<h1 class="hero_title line--title_bottom line--color01">パララックス</h1>
+							<h1 class="hero_title line--title_bottom line--color01">Parallax</h1>
 							<p class="hero_text">2016.07.28</p>
 						</div>
 					</div>
