--- a/src/parallax/index4.html
+++ b/src/parallax/index4.html
@@ -45,19 +45,38 @@
 				<section class="section">
 					<div class="section_body">
 						<h2 class="section_title">DEMO</h2>
-					</div>
 
-					<div class="demo_parallax" id="parallaxContainer">
-						<div class="demo_parallax_body">
-							
+						<div class="demo_parallax" id="parallaxContainer">
+							<div class="demo_parallax_body">
+
+								<div class="demo_parallax_detail">
+									<div class="demo_parallax_contents01 demo_parallax_contents">
+										<h3 class="demo_parallax_title">親譲りの無鉄砲で小供の時から損ばかりしている。</h3>
+										<p class="demo_parallax_text">親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。</p>
+									</div>
+									<div class="demo_parallax_contents02 demo_parallax_contents">
+										<h3 class="demo_parallax_title">親譲りの無鉄砲で小供の時から損ばかりしている。</h3>
+										<p class="demo_parallax_text">親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。</p>
+									</div>
+									<div class="demo_parallax_contents03 demo_parallax_contents">
+										<h3 class="demo_parallax_title">親譲りの無鉄砲で小供の時から損ばかりしている。</h3>
+										<p class="demo_parallax_text">親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。</p>
+									</div>
+									<div class="demo_parallax_contents04 demo_parallax_contents">
+										<h3 class="demo_parallax_title">親譲りの無鉄砲で小供の時から損ばかりしている。</h3>
+										<p class="demo_parallax_text">親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰を抜かす奴があるかと云ったから、この次は抜かさずに飛んで見せますと答えた。</p>
+									</div>
+								</div>
+
+							</div>
 							<div class="demo_parallax_bg">
 								<div class="demo_parallax_bg01"></div>
 								<div class="demo_parallax_bg02"></div>
 								<div class="demo_parallax_bg03"></div>
 							</div>
 						</div>
-					</div>
 
+					</div>
 				</section>
 
 			</article>
@@ -79,6 +98,37 @@
 	position: relative;
 	max-width: 960px;
 	margin: 0 auto;
+}
+
+.demo_parallax_detail {
+	position: relative;
+	z-index: 100;
+}
+.demo_parallax_contents {
+	margin-top: 100px;
+}
+.demo_parallax_title {
+	font-size: 2.6rem;
+	color: #0171bf;
+	margin-bottom: 1em;
+	text-align: center;
+	position: relative;
+	padding-bottom: 1em;
+}
+.demo_parallax_title:after {
+	content: "";
+	display: block;
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width: 50px;
+	height: 2px;
+	background: #0171bf;
+}
+.demo_parallax_text {
+	line-height: 2.2;
 }
 
 .demo_parallax_bg01 {
