とりあえずメモ。Motion Graphics項作りたいね。

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,21 @@
 <!-- 					<div class="readmore"><a href="book01/index.html">全て見る</a></div> -->
 				</section>
 
+				<section class="section">
+					<div class="hero">
+						<div class="hero_body">
+							<h2 class="hero_title line--title_bottom line--color01">Animation</h2>
+							<p class="hero_text">Motion Graphics</p>
+						</div>
+					</div>
+					<div class="topics">
+						<ul class="topics_list clearfix">
+							<li class="topics_item"><a href="animation/index1.html">Css Animation</a></li>
+						</ul>
+					</div>
+<!-- 					<div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
+				</section>
+
 			</article>
 		</main>
 
