雲動くイメージ

--- a/src/animation/index1.html
+++ b/src/animation/index1.html
@@ -32,7 +32,7 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
-							<h1 class="hero_title line--title_bottom line--color01">Css Animation</h1>
+							<h1 class="hero_title line--title_bottom line--color01">circle</h1>
 							<p class="hero_text">2017.11.22</p>
 						</div>
 					</div>
@@ -40,7 +40,7 @@
 
 				<section class="section">
 					<div class="section_body">
-						<h2 class="section_title">Css Animation</h2>
+						<h2 class="section_title">DEMO</h2>
 						<div class="demo">
 								<div class="demo--animation01">
 									<div class="animation-item"><span></span></div>
@@ -91,8 +91,8 @@
 	height: 110%;
 	background: #e0e0e0;
 	border-radius: 47% 49% 42% 50%;
-	-webkit-animation: rotate infinite 20000ms linear;
-	animation: rotate infinite 20000ms linear;
+	-webkit-animation: rotate infinite 10000ms linear;
+	animation: rotate infinite 10000ms linear;
 }
 .animation-item:after {
 	top: -3%;
@@ -101,8 +101,8 @@
 	height: 106%;
 	background: #ababab;
 	border-radius: 48% 44% 47% 46%;
-	-webkit-animation: rotate infinite 15000ms linear;
-	animation: rotate infinite 15000ms linear;
+	-webkit-animation: rotate infinite 7500ms linear;
+	animation: rotate infinite 7500ms linear;
 }
 .animation-item.blue:before {
 	background: #cbf0fc;
@@ -190,8 +190,8 @@
 	height: 110%;
 	background: #e0e0e0;
 	border-radius: 47% 49% 42% 50%;
-	-webkit-animation: rotate infinite 20000ms linear;
-	animation: rotate infinite 20000ms linear;
+	-webkit-animation: rotate infinite 10000ms linear;
+	animation: rotate infinite 10000ms linear;
 }
 .animation-item:after {
 	top: -3%;
@@ -200,8 +200,8 @@
 	height: 106%;
 	background: #ababab;
 	border-radius: 48% 44% 47% 46%;
-	-webkit-animation: rotate infinite 15000ms linear;
-	animation: rotate infinite 15000ms linear;
+	-webkit-animation: rotate infinite 7500ms linear;
+	animation: rotate infinite 7500ms linear;
 }
 .animation-item.blue:before {
 	background: #cbf0fc;
