--- a/src/index.html
+++ b/src/index.html
@@ -88,12 +88,13 @@
 					<div class="hero">
 						<div class="hero_body">
 							<h2 class="hero_title line--title_bottom line--color01">Animation</h2>
-							<p class="hero_text">Motion Graphics</p>
+							<p class="hero_text">Css Animation</p>
 						</div>
 					</div>
 					<div class="topics">
 						<ul class="topics_list clearfix">
-							<li class="topics_item"><a href="animation/index1.html">Css Animation</a></li>
+							<li class="topics_item"><a href="animation/index1.html">circle</a></li>
+							<li class="topics_item"><a href="animation/index2.html">cloud</a></li>
 						</ul>
 					</div>
 <!-- 					<div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
