threejsとか使ってみたよ

--- a/dev/index.html
+++ b/dev/index.html
@@ -44,7 +44,7 @@
 							<li class="topics_item"><a href="samples/index1.html">アコーディオン</a></li>
 						</ul>
 					</div>
-<!-- 					<div class="readmore"><a href="samples/index.html">全て見る</a></div> -->
+					<!-- <div class="readmore"><a href="samples/index.html">全て見る</a></div> -->
 				</section>
 
 				<section class="section">
@@ -61,7 +61,7 @@
 							<li class="topics_item"><a href="parallax/index1.html">Parallax</a></li>
 						</ul>
 					</div>
-<!-- 					<div class="readmore"><a href="scrollmagic/index.html">全て見る</a></div> -->
+					<!-- <div class="readmore"><a href="scrollmagic/index.html">全て見る</a></div> -->
 				</section>
 
 				<section class="section">
@@ -81,7 +81,7 @@
 							<li class="topics_item"><a href="book01/index1.html">コア JavaScript 言語</a></li>
 						</ul>
 					</div>
-<!-- 					<div class="readmore"><a href="book01/index.html">全て見る</a></div> -->
+					<!-- <div class="readmore"><a href="book01/index.html">全て見る</a></div> -->
 				</section>
 
 				<section class="section">
@@ -97,7 +97,23 @@
 							<li class="topics_item"><a href="animation/index2.html">cloud</a></li>
 						</ul>
 					</div>
-<!-- 					<div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
+					<!-- <div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
+				</section>
+
+				<section class="section">
+					<div class="hero">
+						<div class="hero_body">
+							<h2 class="hero_title line--title_bottom line--color01">WebGL</h2>
+							<p class="hero_text">Three.js</p>
+						</div>
+					</div>
+					<div class="topics">
+						<ul class="topics_list clearfix">
+							<li class="topics_item"><a href="threejs/index1.html">地球表示しただけ</a></li>
+							<li class="topics_item"><a href="threejs/index2.html">回転する立方体</a></li>
+						</ul>
+					</div>
+					<!-- <div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
 				</section>
 
 			</article>
