--- a/dev/index.html
+++ b/dev/index.html
@@ -112,6 +112,7 @@
 							<li class="topics_item"><a href="threejs/index1.html">地球表示しただけ</a></li>
 							<li class="topics_item"><a href="threejs/index2.html">回転する立方体</a></li>
 							<li class="topics_item"><a href="threejs/index3.html">いろんな形</a></li>
+							<li class="topics_item"><a href="threejs/index4.html">いろんなライト</a></li>
 						</ul>
 					</div>
 					<!-- <div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
