--- a/dev/threejs/index4.html
+++ b/dev/threejs/index4.html
@@ -33,8 +33,8 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
-							<h1 class="hero_title line--title_bottom line--color01">回転する立方体</h1>
-							<p class="hero_text">2018.02.05</p>
+							<h1 class="hero_title line--title_bottom line--color01">いろんなライト</h1>
+							<p class="hero_text">2018.02.19</p>
 						</div>
 					</div>
 				</section>
@@ -45,7 +45,9 @@
 					</div>
 
 					<div class="demo_threejs">
-						<canvas id="myCanvas"></canvas>
+						<canvas id="threejsDemo01"></canvas>
+						<canvas id="threejsDemo02"></canvas>
+						<canvas id="threejsDemo03"></canvas>
 					</div>
 				</section>
 
@@ -73,7 +75,7 @@ function threejsDemo01() {
 	const height = 540
 
 	const renderer = new THREE.WebGLRenderer({
-		canvas: document.querySelector('#myCanvas')
+		canvas: document.querySelector('#threejsDemo01')
 	})
 	renderer.setPixelRatio(window.devicePixelRatio)
 	renderer.setSize(width, height)
@@ -81,23 +83,43 @@ function threejsDemo01() {
 	const scene = new THREE.Scene()
 
 	const camera = new THREE.PerspectiveCamera(45, width / height)
-	camera.position.set(0, 0, +1000)
+	camera.position.set(20, 20, 20)
+	camera.lookAt(new THREE.Vector3(0, 0, 0))
 
-	const geometry = new THREE.BoxGeometry(400, 400, 400)
-	const material = new THREE.MeshNormalMaterial()
-	const box = new THREE.Mesh(geometry, material)
-	scene.add(box)
+	const meshFloor = new THREE.Mesh(
+		new THREE.BoxGeometry(2000, 0.1, 2000),
+		new THREE.MeshStandardMaterial({ color: 0x808080, roughness: 0.0 }))
+	scene.add(meshFloor)
 
+	const meshKnot = new THREE.Mesh(
+		new THREE.TorusKnotGeometry(3, 1, 100, 5),
+		new THREE.MeshStandardMaterial({color: 0xAA0000, roughness: 0.0}))
+	meshKnot.position.set(0, 5, 0)
+	scene.add(meshKnot)
+
+	const light = new THREE.DirectionalLight(0xFFFFFF, 1)
+	scene.add(light)
+
+	const lightHelper = new THREE.DirectionalLightHelper(light)
+	scene.add(lightHelper)
 	tick()
 
-	function tick() {
-		box.rotation.y += 0.01
-		box.rotation.x += 0.01
-		box.rotation.z += 0.01
-		renderer.render(scene, camera)
 
+	function tick() {
+
+		renderer.render(scene, camera)
+		const t = ( Date.now() / 500 )
+		const r = 10.0
+		const lx = r * Math.cos(t)
+		const lz = r * Math.sin(t)
+		const ly = 6.0 + 5.0 * Math.sin(t / 3.0)
+		light.position.set(lx, ly, lz)
+		lightHelper.update()
 		requestAnimationFrame(tick)
 	}
 }
+
+
+
 </script>
 </html>
