--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
 						<ul class="topics_list clearfix">
 							<li class="topics_item"><a href="animation/index1.html">circle</a></li>
 							<li class="topics_item"><a href="animation/index2.html">cloud</a></li>
+							<li class="topics_item"><a href="animation/index3.html">nav</a></li>
 						</ul>
 					</div>
 					<!-- <div class="readmore"><a href="animation/index.html">全て見る</a></div> -->
