マウスの座標取得して画像を動かしたいんじゃ

--- a/dev/index.html
+++ b/dev/index.html
@@ -56,6 +56,8 @@
 					</div>
 					<div class="topics">
 						<ul class="topics_list clearfix">
+							<li class="topics_item"><a href="parallax/index5.html">マウスに合わせて…</a></li>
+							<li class="topics_item"><a href="parallax/index5.html">scrollmagic parallax</a></li>
 							<li class="topics_item"><a href="parallax/index3.html">skrollr</a></li>
 							<li class="topics_item"><a href="parallax/index2.html">Parallax2</a></li>
 							<li class="topics_item"><a href="parallax/index1.html">Parallax</a></li>
