トップページ修正

--- a/dev/index.html
+++ b/dev/index.html
@@ -89,6 +89,21 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
+							<h2 class="hero_title line--title_bottom line--color01">JavaScript</h2>
+							<p class="hero_text">Basic Study</p>
+						</div>
+					</div>
+					<div class="topics">
+						<ul class="topics_list clearfix">
+							<li class="topics_item"><a href="basicstudy/index1.html">コールバック - Promise</a></li>
+						</ul>
+					</div>
+					<!-- <div class="readmore"><a href="basicstudy/index.html">全て見る</a></div> -->
+				</section>
+
+				<section class="section">
+					<div class="hero">
+						<div class="hero_body">
 							<h2 class="hero_title line--title_bottom line--color01">Animation</h2>
 							<p class="hero_text">Css Animation</p>
 						</div>
