--- a/dev/basicstudy/index1.html
+++ b/dev/basicstudy/index1.html
@@ -32,7 +32,7 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
-							<h1 class="hero_title line--title_bottom line--color01">nav</h1>
+							<h1 class="hero_title line--title_bottom line--color01">コールバック - Promise</h1>
 							<p class="hero_text">2018.03.07</p>
 						</div>
 					</div>
