Vue勉強はじめました。楽しいです。

--- a/dev/index.html
+++ b/dev/index.html
@@ -32,6 +32,22 @@
 				<section class="section">
 					<div class="hero">
 						<div class="hero_body">
+							<h2 class="hero_title line--title_bottom line--color01">Vue</h2>
+							<p class="hero_text">基礎から学ぶ Vue.js</p>
+						</div>
+					</div>
+					<div class="topics">
+						<ul class="topics_list clearfix">
+							<li class="topics_item"><a href="vue/index2.html">基本のデータバインディング</a></li>
+							<li class="topics_item"><a href="vue/index1.html">はじめに</a></li>
+						</ul>
+					</div>
+					<!-- <div class="readmore"><a href="vue/index.html">全て見る</a></div> -->
+				</section>
+
+				<section class="section">
+					<div class="hero">
+						<div class="hero_body">
 							<h2 class="hero_title line--title_bottom line--color01">Samples</h2>
 						</div>
 					</div>
